# flasked_blog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml
features/steps/: cli.py  dog.py
src/flasked_blog/: __init__.py  constants.py  email.py  main.py  posts.py  utils.py
src/flasked_blog/templates/: card.html  contact.html  footer.html  gordo.html  header.html  index.html  index_original.html  post_big.html  sidebar.html  sidemenu.html
